--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div>
           <tr>
-            <td colspan="2">
+            <td colspan="3">
               <table>
                 <td class="tulisan" width="75%">
                   <strong>Dua Wisudawan Sistem Informasi Berhasil Meraih Predikat Cumlaude</strong>
@@ -71,10 +71,7 @@
                     transformasi digital yang distruptif ini. Acara wisuda ini dapat disaksikan melalui kanal youtube ITTelkom Surabaya <a href="https://youtu.be/bboTVfT1NWY">https://youtu.be/bboTVfT1NWY</a>
                   </p>
                   <div>
-                    <video width="540\\" height="280" controls>
-                      <link rel="stylesheet" href="https://youtu.be/bboTVfT1NWY" />
-                      Your browser does not support the video tag.
-                    </video>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/bboTVfT1NWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                 </td>
                 <td width="25%">
